[package]
name = "tokio-rustls"
version = "0.5.0"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/tokio-rustls"
homepage = "https://github.com/quininer/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]

[badges]
travis-ci = { repository = "quininer/tokio-rustls" }
appveyor = { repository = "quininer/tokio-rustls" }

[dependencies]
futures = "0.1.21"
tokio-io = "0.1.2"
tokio-proto = { version = "0.1.1"}
rustls = "0.12"
webpki = "0.18.0-alpha"
tokio-core = "0.1.11"
log = "0.4.1"

[dev-dependencies]
# futures = "0.2.0"
tokio = "0.1.6"

[features]
#default = [ "tokio" ]
# unstable-futures = [
# 	"futures-core",
# 	"futures-io",
# 	"tokio/unstable-futures"
# ]
